[gd_scene load_steps=3 format=2]

[ext_resource path="res://gui/theme.tres" type="Theme" id=1]
[ext_resource path="res://tool/IndexPaletteRecolor/IndexPaletteRecolor.gd" type="Script" id=2]

[node name="IndexPaletteRecolor" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 32.0
margin_bottom = 32.0

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 327.0
margin_bottom = 284.0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
margin_left = 12.0
margin_top = 12.0
margin_right = 299.0
margin_bottom = 256.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 271.0
margin_bottom = 228.0

[node name="FolderButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_right = 255.0
margin_bottom = 57.0
text = "pick a folder to run in"

[node name="PickedFolderLabel" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 73.0
margin_right = 255.0
margin_bottom = 98.0

[node name="RunButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 114.0
margin_right = 255.0
margin_bottom = 171.0
text = "run"

[node name="StateLabel" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 187.0
margin_right = 255.0
margin_bottom = 212.0

[node name="FileDialog" type="FileDialog" parent="."]
visible = true
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -309.0
margin_top = 56.0
margin_right = 346.0
margin_bottom = -64.0
rect_min_size = Vector2( 250, 87.5 )
window_title = "Open a Directory"
mode = 2

[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/FolderButton" to="." method="_on_FolderButton_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/RunButton" to="." method="_on_RunButton_pressed"]
[connection signal="dir_selected" from="FileDialog" to="." method="_on_FileDialog_dir_selected"]
